[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[workspace]
members = [
    "binary_heap",
    "concept",
    "hash_map",
    "single_linked_list",
    "sort",
    "specification",
]

[dependencies]
single_linked_list = { path = "single_linked_list" }
concept = { path = "concept" }
specification = { path = "specification" }
hash_map = { path = "hash_map" }
binary_heap = { path = "binary_heap" }
sort = { path = "sort" }
