[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "coding_problem",
    "concept",
    "package",
    "algorithm",
    "specification",
    "datastructure",
    "package",
]

[toolchain]
channel = "nightly"

# dependencies are automatically added as members
[dependencies]
datastructure = { path = "datastructure" }
concept = { path = "concept" }
specification = { path = "specification" }
algorithm = { path = "algorithm" }
